learning/kubernetes-playbook/manifests/app2-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: app2-deployment

spec:
  replicas: 2

  selector:
    matchLabels:
      app: app2

  template:
    metadata:
      labels:
        app: app2

    spec:
      containers:
        - name: app2
          image: hashicorp/http-echo
          args:
            - "-text=Hello from App2"
          ports:
            - containerPort: 5678
