learning/kubernetes-playbook/manifests/configmap-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: configmap-demo

spec:
  replicas: 1

  selector:
    matchLabels:
      app: configmap-demo

  template:
    metadata:
      labels:
        app: configmap-demo

    spec:
      containers:
        - name: configmap-demo
          image: busybox
          command: ["sh", "-c", "sleep 3600"]
