learning/kubernetes-playbook/manifests/dynamic-pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: dynamic-pod

spec:
  containers:
    - name: app
      image: busybox

      command:
        - sh
        - -c
        - sleep 3600

      volumeMounts:
        - name: app-storage
          mountPath: /data

  volumes:
    - name: app-storage
      persistentVolumeClaim:
        claimName: dynamic-pvc
