learning/kubernetes-playbook/manifests/emptydir-demo.yaml
apiVersion: v1
kind: Pod

metadata:
  name: emptydir-demo

spec:
  containers:

    - name: writer

      image: busybox

      command:
        - sh
        - -c
        - sleep 3600

      volumeMounts:
        - name: shared-volume
          mountPath: /shared

    - name: reader

      image: busybox

      command:
        - sh
        - -c
        - sleep 3600

      volumeMounts:
        - name: shared-volume
          mountPath: /shared

  volumes:
    - name: shared-volume
      emptyDir: {}
