learning/kubernetes-playbook/manifests/hostpath-demo.yaml
apiVersion: v1
kind: Pod

metadata:
  name: hostpath-demo

spec:
  containers:
    - name: app
      image: busybox
      command:
        - sh
        - -c
        - sleep 3600

      volumeMounts:
        - name: host-storage
          mountPath: /shared

  volumes:
    - name: host-storage
      hostPath:
        path: /tmp/k8s-host-data
        type: DirectoryOrCreate
