learning/kubernetes-playbook/manifests/pod-reader-test.yaml
apiVersion: v1
kind: Pod

metadata:
  name: pod-reader-test

spec:
  serviceAccountName: pod-reader

  containers:
    - name: kubectl

      image: bitnami/kubectl:latest

      command:
        - sleep
        - "3600"
