learning/kubernetes-playbook/manifests/pvc-pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: pvc-demo

spec:
  containers:
    - name: app
      image: busybox
      command:
        - sh
        - -c
        - sleep 3600

      volumeMounts:
        - name: app-storage
          mountPath: /data

  volumes:
    - name: app-storage
      persistentVolumeClaim:
        claimName: app-pvc
