learning/kubernetes-playbook/manifests/secret-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: secret-demo

spec:
  replicas: 1

  selector:
    matchLabels:
      app: secret-demo

  template:
    metadata:
      labels:
        app: secret-demo

    spec:
      containers:
      - name: busybox

        image: busybox

        command:
        - sh
        - -c
        - sleep 3600
