learning/kubernetes-playbook/manifests/secret-volume-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: secret-volume-demo

spec:
  replicas: 1

  selector:
    matchLabels:
      app: secret-volume-demo

  template:
    metadata:
      labels:
        app: secret-volume-demo

    spec:
      containers:
      - name: busybox

        image: busybox

        command:
        - sh
        - -c
        - sleep 3600

        volumeMounts:
        - name: secret-volume
          mountPath: /etc/secret

      volumes:
      - name: secret-volume
        secret:
          secretName: app-secret
