learning/kubernetes-playbook/manifests/app1-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: app1-service

spec:
  selector:
    app: app1

  ports:
    - protocol: TCP
      port: 80
      targetPort: 5678

  type: ClusterIP
