learning/kubernetes-playbook/manifests/app2-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: app2-service

spec:
  selector:
    app: app2

  ports:
    - protocol: TCP
      port: 80
      targetPort: 5678

  type: ClusterIP
